Now requires GET scope or publicRead before querying Solr